# linux_apps_testsuite

./: Makefile  groups  project.config
aoa_test/: Makefile  accessory.c  hid.c  linux-adk.c  linux-adk.h
cam_enumeration/: Makefile  cam_enumeration.cpp
cam_test/: Makefile  cam_test.cpp  debug.h  display.cpp  display.h  globaldef.h  memory.cpp  memory.h  option.cpp  option.h
dp_cam_test/: dp_cam_test.c  option.c  option.h
dp_cam_test_onedevice/: dp_cam_test_onedevice.c  option.c  option.h
dp_clipper_decimator_test/: dp_clipper_decimator_test.c
dp_decimator_crop_n_scaledown_test/: dp_decimator_crop_n_scaledown_test.c
dp_decimator_test/: dp_decimator_test.c
scaler_test/: Makefile  option.cpp  option.h  scaler-test.cpp
uac_test/: Makefile  uac_test.c
usb_test/: Makefile  accessory.c  handle  hid.c  linux-adk.c  usb_test
usb_test/lib/: libusb-1.0.so.0.1.0
uvc_test/: Makefile  autogen.sh  v4l2grab.c
uvc_test/contrib/test/: v4l2grab.c
uvc_test/install/lib/: libv4l1.so.0.0.0  libv4l2.so.0.0.0  libv4l2rds.so.0.0.0  libv4lconvert.so.0.0.0
uvc_test/install/lib/libv4l/: ov511-decomp  ov518-decomp
video_api_test/: configure.ac
video_api_test/src/: Makefile.am  MediaExtractor.h  NX_V4l2Utils.cpp  Util.cpp  Util.h  VideoAllocTest.cpp  VideoDecTest.cpp  VideoEncTest.cpp  main.cpp
